--- a/src/index.css
+++ b/src/index.css
@@ -22,5 +22,34 @@
   --animate-fade-in-delay-4: fadeIn 0.7s ease-in-out 0.8s fowards;
   --animamted-meteor: meteor 5s linear infinite;
 
+  @keyframes float {
+    0%, 100% { transform: translateY(0px); }
+    50% { transform: translateY(-10px); }
+    
+  }
+
+  @keyframes pulseSubtitle {
+    0%, 100% { opacity: 1; }
+    50% { opacity: 0.8; }
+  }
+
+  @keyframes fadeIn {
+    0% { opacity: 0; transform: translateY(20px); }
+    100% { opacity: 1; transform: translateY(0); }
+  }
+
+  @keyframes meteor {
+    0% {
+      transform: rotate(215deg) translateX(0);
+      opacity: 1;
+    }
+    70% {
+      opacity: 1;
+    }
+    100% {
+      transform: rotate(215deg) translateX(-500px);
+      opacity: 0;
+    }
+  }
 
 }
